# spec-cleaner

./: .bandit  .coverage  .gitignore  .isort.cfg  .landscape.yaml  .pre-commit-config.yaml  .travis.yml  AUTHORS  COPYING  MANIFEST.in  Makefile  README  README.md  README.md.in  README.rst  README.rst.in  RELEASE.md  TESTSUITE.md  TODO  conversions-update.pl  conversions-update.sh  devel-requirements.pip  excludes-bracketing.txt  generate-licenses-for-rpmlint.py  license-update.sh  licenses_changes.txt  path-macros-todo.txt  pkgconfig-update.pl  pkgconfig-update.sed  pkgconfig-update.sh  pkgconfig_conversions.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  spec-cleaner  spec-polish-macros  testphone.spec  tox.ini  travis.yml
data/: .licenses_changes.txt.swp  allowed_groups.txt  cmake_conversions.txt  excludes-bracketing.txt  licences_exceptions.txt  licenses-suse.toml  licenses.toml  licenses_changes.txt  licenses_exceptions.txt  perl_conversions.txt  pkgconfig_conversions.txt  tex_conversions.txt
next/: README  TODO  section.py  simplerewriter.py  spec-cleaner  spec.py
obs/: clean_spec_file  clean_spec_file.service  format_spec_file  format_spec_file.service
spec_cleaner/: __init__.py  __main__.py  cleaner.py  dependency_parser.py  fileutils.py  rpmbuild.py  rpmcheck.py  rpmcleaner.py  rpmcopyright.py  rpmdescription.py  rpmexception.py  rpmfiles.py  rpmhelpers.py  rpminstall.py  rpmpackage.py  rpmpreamble.py  rpmpreambleelements.py  rpmprep.py  rpmprune.py  rpmregexp.py  rpmrequirestoken.py  rpmscriplets.py  rpmsection.py
tests/: README  _run  acceptance-tests.py  buildrequires-in.spec  (+11 more)
(+215 files in other folders)
